--- a/views/blogSection/blogNewThread.handlebars
+++ b/views/blogSection/blogNewThread.handlebars
@@ -17,9 +17,11 @@
             <label for="markdown">Markdown</label>
             <textarea name="markdown" id="markdown" class="form-control"></textarea> 
         </div>
-
-        <a href="/expshare" class="btn btn-secondary">Cancel</a>
-        <button type="submit" class="btn btn-primary">Save</button>
+        
+        <div class="mt-2">
+            <a href="/expshare" class="btn btn-secondary">Cancel</a>
+            <button type="submit" class="btn btn-primary">Save</button>
+        </div>
     </form>
     
     
