--- a/views/blogSection/blogNewThread.handlebars
+++ b/views/blogSection/blogNewThread.handlebars
@@ -5,17 +5,17 @@
     <form action="/expshare" method="POST">
         <div class="form-group">
             <label for="title">Title</label>
-            <input type="text" name="title" id="title" class="form-control" required>           
+            <input type="text" name="title" id="title" class="form-control" value='{{threads.title}}' required>           
         </div>
 
         <div class="form-group">
             <label for="description">Description</label>
-            <textarea name="description" id="description" class="form-control"></textarea> 
+            <textarea name="description" id="description" class="form-control" value='{{threads.description}}' required></textarea> 
         </div>
 
         <div class="form-group">
             <label for="markdown">Markdown</label>
-            <textarea name="markdown" id="markdown" class="form-control"></textarea> 
+            <textarea name="markdown" id="markdown" class="form-control" value='{{threads.markdown}}' required></textarea> 
         </div>
         
         <div class="mt-2">
