--- a/Client/src/components/SearchBar/searchBar.css
+++ b/Client/src/components/SearchBar/searchBar.css
@@ -18,8 +18,9 @@
 
 .headerList {
   display: flex;
-  gap: 40px;
+  gap: 2em;
   margin-bottom: 50px;
+  justify-content:center;
 }
 
 .headerListItem {
@@ -48,16 +49,16 @@
 }
 
 .headerSearch {
-  height: 30px;
+  height: 3rem;
   background-color: white;
   border: 3px solid #febb02;
   display: flex;
   align-items: center;
   justify-content: space-around;
-  padding: 10px 0px;
+  padding: 0.5rem 0px;
   border-radius: 5px;
   position: absolute;
-  bottom: -25px;
+  bottom: 0;
   width: 100%;
   max-width: 1024px;
 }
