--- a/Client/src/pages/MapPage/mapview.css
+++ b/Client/src/pages/MapPage/mapview.css
@@ -1,16 +1,26 @@
+.map-section {
+  max-width: 80vw;
+  margin: 2vw auto;
+  align-self: center;
+  justify-content:center;
+}
+
 .map-container {
-  height: 400px;
-  }
+  height: 300px;
+  width: 100%;
+  padding: 1em;
+}
    
-  .sidebar {
-  background-color: rgba(35, 55, 75, 0.9);
-  color: #fff;
-  padding: 6px 12px;
-  font-family: monospace;
-  z-index: 1;
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin: 12px;
-  border-radius: 4px;
-  }
+.sidebar {
+background-color: rgba(35, 55, 75, 0.9);
+color: #fff;
+padding: 6px 12px;
+font-family: monospace;
+z-index: 1;
+position: relative;
+width: 30em;
+top: 0;
+left: 0;
+margin: 12px;
+border-radius: 4px;
+}
